@@ -49,6 +49,9 @@
 #include <stdlib.h>
 #include <math.h>
 #include <limits.h>
+#include <unistd.h>
+#include <sys/types.h>
+#include <signal.h>
 
 #define GCONF_DIR "/apps/metacity/general"
 
@@ -662,6 +665,7 @@ static Atom toolkit_action_atom;
 static Atom toolkit_action_main_menu_atom;
 static Atom toolkit_action_run_dialog_atom;
 static Atom toolkit_action_window_menu_atom;
+static Atom toolkit_action_force_quit_dialog_atom;
 
 static Atom panel_action_atom;
 static Atom panel_action_main_menu_atom;
@@ -729,6 +733,7 @@ typedef struct _decor {
     WnckWindowState   state;
     WnckWindowActions actions;
     XID		      prop_xid;
+    GtkWidget	      *force_quit_dialog;
     void	      (*draw) (struct _decor *d);
 } decor_t;
 
@@ -2819,6 +2824,14 @@ remove_frame_window (WnckWindow *win)
 	d->icon_pixmap = NULL;
     }
 
+    if (d->force_quit_dialog)
+    {
+	GtkWidget *dialog = d->force_quit_dialog;
+
+	d->force_quit_dialog = NULL;
+	gtk_widget_destroy (dialog);
+    }
+
     d->width  = 0;
     d->height = 0;
 
@@ -2982,6 +2995,8 @@ window_opened (WnckScreen *screen,
     d->prop_xid = 0;
 
     d->decorated = FALSE;
+
+    d->force_quit_dialog = NULL;
 
     d->draw = draw_window_decoration;
 
@@ -3618,6 +3633,181 @@ panel_action (Display *xdisplay,
     XSendEvent (xdisplay, root, FALSE, StructureNotifyMask, &ev);
 }
 
+static void
+force_quit_dialog_realize (GtkWidget *dialog,
+			   void      *data)
+{
+    WnckWindow *win = data;
+
+    gdk_error_trap_push ();
+    XSetTransientForHint (gdk_display,
+			  GDK_WINDOW_XID (dialog->window),
+			  wnck_window_get_xid (win));
+    XSync (gdk_display, FALSE);
+    gdk_error_trap_pop ();
+}
+
+static char *
+get_client_machine (Window xwindow)
+{
+    Atom   atom, type;
+    gulong nitems, bytes_after;
+    guchar *str = NULL;
+    int    format, result;
+    char   *retval;
+
+    atom = XInternAtom (gdk_display, "WM_CLIENT_MACHINE", FALSE);
+
+    gdk_error_trap_push ();
+
+    result = XGetWindowProperty (gdk_display,
+				 xwindow, atom,
+				 0, G_MAXLONG,
+				 FALSE, XA_STRING, &type, &format, &nitems,
+				 &bytes_after, (guchar **) &str);
+
+    gdk_error_trap_pop ();
+
+    if (result != Success)
+	return NULL;
+
+    if (type != XA_STRING)
+    {
+	XFree (str);
+	return NULL;
+    }
+
+    retval = g_strdup (str);
+
+    XFree (str);
+
+    return retval;
+}
+
+static void
+kill_window (WnckWindow *win)
+{
+    WnckApplication *app;
+
+    app = wnck_window_get_application (win);
+    if (app)
+    {
+	gchar buf[257], *client_machine;
+	int   pid;
+
+	pid = wnck_application_get_pid (app);
+	client_machine = get_client_machine (wnck_application_get_xid (app));
+
+	if (client_machine && pid > 0)
+	{
+	    if (gethostname (buf, sizeof (buf) - 1) == 0)
+	    {
+		if (strcmp (buf, client_machine) == 0)
+		    kill (pid, 9);
+	    }
+	}
+
+	if (client_machine)
+	    g_free (client_machine);
+    }
+
+    gdk_error_trap_push ();
+    XKillClient (gdk_display, wnck_window_get_xid (win));
+    XSync (gdk_display, FALSE);
+    gdk_error_trap_pop ();
+}
+
+static void
+force_quit_dialog_response (GtkWidget *dialog,
+			    gint      response,
+			    void      *data)
+{
+    WnckWindow *win = data;
+    decor_t    *d = g_object_get_data (G_OBJECT (win), "decor");
+
+    if (response == GTK_RESPONSE_ACCEPT)
+	kill_window (win);
+
+    if (d->force_quit_dialog)
+    {
+	d->force_quit_dialog = NULL;
+	gtk_widget_destroy (dialog);
+    }
+}
+
+static void
+show_force_quit_dialog (WnckWindow *win,
+			Time        timestamp)
+{
+    decor_t   *d = g_object_get_data (G_OBJECT (win), "decor");
+    GtkWidget *dialog;
+    gchar     *str, *tmp;
+
+    if (d->force_quit_dialog)
+	return;
+
+    tmp = g_markup_escape_text (wnck_window_get_name (win), -1);
+    str = g_strdup_printf ("The window \"%s\" is not responding.", tmp);
+
+    g_free (tmp);
+
+    dialog = gtk_message_dialog_new (NULL, 0,
+				     GTK_MESSAGE_WARNING,
+				     GTK_BUTTONS_NONE,
+				     "<b>%s</b>\n\n%s",
+				     str,
+				     "Forcing this application to "
+				     "quit will cause you to lose any "
+				     "unsaved changes.");
+    g_free (str);
+
+    gtk_window_set_icon_name (GTK_WINDOW (dialog), "force-quit");
+
+    gtk_label_set_use_markup (GTK_LABEL (GTK_MESSAGE_DIALOG (dialog)->label),
+			      TRUE);
+    gtk_label_set_line_wrap (GTK_LABEL (GTK_MESSAGE_DIALOG (dialog)->label),
+			     TRUE);
+
+    gtk_dialog_add_buttons (GTK_DIALOG (dialog),
+			    GTK_STOCK_CANCEL,
+			    GTK_RESPONSE_REJECT,
+			    "_Force Quit",
+			    GTK_RESPONSE_ACCEPT,
+			    NULL);
+
+    gtk_dialog_set_default_response (GTK_DIALOG (dialog), GTK_RESPONSE_REJECT);
+
+    g_signal_connect (G_OBJECT (dialog), "realize",
+		      G_CALLBACK (force_quit_dialog_realize),
+		      win);
+
+    g_signal_connect (G_OBJECT (dialog), "response",
+		      G_CALLBACK (force_quit_dialog_response),
+		      win);
+
+    gtk_window_set_modal (GTK_WINDOW (dialog), TRUE);
+
+    gtk_widget_realize (dialog);
+
+    gdk_x11_window_set_user_time (dialog->window, timestamp);
+
+    gtk_widget_show (dialog);
+
+    d->force_quit_dialog = dialog;
+}
+
+static void
+hide_force_quit_dialog (WnckWindow *win)
+{
+    decor_t *d = g_object_get_data (G_OBJECT (win), "decor");
+
+    if (d->force_quit_dialog)
+    {
+	gtk_widget_destroy (d->force_quit_dialog);
+	d->force_quit_dialog = NULL;
+    }
+}
+
 static GdkFilterReturn
 event_filter_func (GdkXEvent *gdkxevent,
 		   GdkEvent  *event,
@@ -3715,6 +3905,20 @@ event_filter_func (GdkXEvent *gdkxevent,
 		    action_menu_map (win,
 				     xevent->xclient.data.l[2],
 				     xevent->xclient.data.l[1]);
+		}
+	    }
+	    else if (action == toolkit_action_force_quit_dialog_atom)
+	    {
+		WnckWindow *win;
+
+		win = wnck_window_get (xevent->xclient.window);
+		if (win)
+		{
+		    if (xevent->xclient.data.l[2])
+			show_force_quit_dialog (win,
+						xevent->xclient.data.l[1]);
+		    else
+			hide_force_quit_dialog (win);
 		}
 	    }
 	}
@@ -4175,6 +4379,9 @@ main (int argc, char *argv[])
 	XInternAtom (xdisplay, "_COMPIZ_TOOLKIT_ACTION_RUN_DIALOG", FALSE);
     toolkit_action_window_menu_atom =
 	XInternAtom (xdisplay, "_COMPIZ_TOOLKIT_ACTION_WINDOW_MENU", FALSE);
+    toolkit_action_force_quit_dialog_atom =
+	XInternAtom (xdisplay, "_COMPIZ_TOOLKIT_ACTION_FORCE_QUIT_DIALOG",
+		     FALSE);
 
     panel_action_atom		 =
 	XInternAtom (xdisplay, "_GNOME_PANEL_ACTION", FALSE);
